tests/fixtures/valid/pointer_string_reads.c
int second(char *text) {
    return text[1];
}

int main() {
    return second("abc");
}
