tests/fixtures/invalid/struct_char_array_string_initializer_too_long.c
struct Label {
    char text[3];
};

int main(void) {
    struct Label label = {"toolong"};
    return label.text[0];
}
